--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,6 @@
 {
   "extends": ["config:base"],
-  "ignorePaths": ["tools/**", "server/**"],
+  "ignorePaths": ["/tools/bumblebee/**", "/server/**"],
   "dependencyDashboard": true,
   "dependencyDashboardApproval": true,
   "lockFileMaintenance": { "enabled": true },
