--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "npm": ">=10"
   },
   "scripts": {
+    "prepare": "husky install",
     "start": "turbo run start",
     "build": "turbo run build",
     "lint": "turbo run lint",
@@ -41,12 +42,18 @@
     "eslint": "9.26.0",
     "eslint-config-turbo": "2.5.2",
     "eslint-plugin-jest": "28.11.0",
+    "husky": "9.0.11",
     "jest": "29.7.0",
+    "lint-staged": "13.3.0",
     "prettier": "3.5.3",
     "ts-node": "10.9.2",
     "turbo": "2.5.2",
     "typescript": "5.8.3",
     "typescript-eslint": "8.31.1"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": "eslint --fix",
+    "*.{js,jsx,ts,tsx,json,css,scss,md}": "prettier --write"
   },
   "packageManager": "npm@10.7.0"
 }
