--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "dotenv": "^16.5.0",
     "eslint": "9.26.0",
     "eslint-config-turbo": "2.5.2",
+    "eslint-plugin-boundaries": "5.3.1",
     "eslint-plugin-jest": "28.11.0",
     "jest": "29.7.0",
     "prettier": "3.5.3",
