--- a/nestjs/.env.example
+++ b/nestjs/.env.example
@@ -20,3 +20,5 @@ RSSHCOOL_AUTH_GITHUB_CALLBACK=http://localhost:3002/auth/github/callback
 
 RSSCHOOL_AUTH_DEV_USERNAME=yuliahope
 RSSCHOOL_AUTH_DEV_ADMIN=true
+
+#RSSCHOOL_DEV_TOOLS=true
