--- a/turbo.json
+++ b/turbo.json
@@ -55,7 +55,16 @@
         "RSSCHOOL_DEV_TOOLS"
       ]
     },
-    "lint": {},
+    "lint": {
+      "env": [
+        "AGENT",
+        "OPENCODE",
+        "CLAUDECODE",
+        "CURSOR_AGENT",
+        "CODEX_THREAD_ID",
+        "NO_COLOR"
+      ]
+    },
     "test": {},
     "test:ci": {},
     "start": {
