fix: remove code from @common/ (#2901)
* fix: migrate @common/ code

* fix: update turbo repo

* chore: update turbo and fix minor issues

* fix: code

* fix: update guidelines and agents.md

---------

Co-authored-by: Maksim Shylau <shilaums@gmail.com>

--- a/turbo.json
+++ b/turbo.json
@@ -55,13 +55,23 @@
         "RSSCHOOL_DEV_TOOLS"
       ]
     },
-    "lint": {},
+    "lint": {
+      "env": [
+        "AGENT",
+        "OPENCODE",
+        "CLAUDECODE",
+        "CURSOR_AGENT",
+        "CODEX_THREAD_ID",
+        "NO_COLOR"
+      ]
+    },
     "test": {},
     "test:ci": {},
     "start": {
       "cache": false,
       "persistent": true
     },
-    "compile": {}
+    "compile": {},
+    "openapi": {}
   }
 }
