--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "test": "turbo run test",
     "test:ci": "turbo run test:ci",
     "compile": "turbo run compile",
-    "format": "prettier --write client server nestjs common setup docs .github",
+    "format": "prettier --log-level warn --write client server nestjs common setup docs .github",
     "ci:format": "prettier --check client server nestjs common setup docs .github",
     "db:restore": "podman exec -i db psql -U rs_master -d rs_school < ./setup/backup-local.sql",
     "db:dump": "PGPASSWORD=12345678 pg_dump -h localhost --username rs_master rs_school --file ./setup/backup-local.sql",
     "db:dump:win": "pg_dump -h localhost --username rs_master rs_school > ./setup/backup-local.sql",
     "db:up": "podman compose -f ./setup/docker-compose.yml up  -d",
-    "db:down": "podman compose -f ./setup/docker-compose.yml down"
+    "db:down": "podman compose -f ./setup/docker-compose.yml down",
+    "openapi": "turbo run openapi"
   },
   "dependencies": {
     "axios": "1.8.4",
@@ -44,7 +45,7 @@
     "jest": "29.7.0",
     "prettier": "3.5.3",
     "ts-node": "10.9.2",
-    "turbo": "2.5.2",
+    "turbo": "2.8.7",
     "typescript": "5.8.3",
     "typescript-eslint": "8.31.1"
   },
